changes: Confession now uses modals