@@ -5,18 +5,13 @@ import com.github.hokkaydo.eplbot.command.Command;
 import com.github.hokkaydo.eplbot.command.CommandContext;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
 public class ConfessionCommand extends ListenerAdapter implements Command {
-
-    private static final String CONFESSION = "confession";
-
 
     private final ConfessionProcessor confessionProcessor;
     ConfessionCommand(ConfessionProcessor processor) {
@@ -41,7 +36,7 @@ public class ConfessionCommand extends ListenerAdapter implements Command {
     @NotNull
     @Override
     public List<OptionData> getOptions() {
-        return Collections.singletonList(new OptionData(OptionType.STRING, CONFESSION, Strings.getString("command.confession.option.description"), true));
+        return List.of();
     }
 
     @Override
